--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @import url(common.css);
 @import url(header.css);
-@import url(main-picture.css);
+@import url(main-photo.css);
 @import url(our_brands.css);
 @import url(benefits.css);
 @import url(affiliate.css);
