--- a/css/main-photo.css
+++ b/css/main-photo.css
@@ -35,14 +35,14 @@
   align-items: center;
   justify-content: center;
   gap: 25px;
-  font-size: 18px;
+  font-size: 22px;
 }
 .main_image_logo {
   display: block;
   margin: 0 auto;
   margin-top: 50px;
 }
-@media (max-width: 574px) {
+@media (max-width: 700px) {
   .main_image_logo {
     margin-top: 30px;
   }
@@ -66,5 +66,12 @@
   }
   .advantages {
     gap: 10px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 1200px) {
+  .advantages {
+    gap: 10px;
+    font-size: 18px;
   }
 }
