--- a/css/main-photo.css
+++ b/css/main-photo.css
@@ -75,3 +75,15 @@
     font-size: 18px;
   }
 }
+
+@media (max-width: 700px) and (max-height: 560px) {
+  .content_image {
+    display: none;
+  }
+  .main_photo_content_wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 90px;
+  }
+}
