adv, serv section ready

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 @import url(header.css);
 @import url(main-photo.css);
 @import url(our_brands.css);
-@import url(benefits.css);
+@import url(adv_serv.css);
 @import url(affiliate.css);
 @import url(traffic.css);
 @import url(testimonials.css);
