--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,7 @@
 @import url(common.css);
 @import url(header.css);
 @import url(main-photo.css);
-@import url(our_brands.css);
 @import url(adv_serv.css);
-@import url(affiliate.css);
-@import url(traffic.css);
-@import url(testimonials.css);
+@import url(gallery.css);
 @import url(contact.css);
 @import url(footer.css);
-@import url(terms-policies.css);
