--- a/css/contact.css
+++ b/css/contact.css
@@ -1,137 +1,65 @@
 .contacts {
-  background-color: var(--sub-bg-color);
-  padding-bottom: 80px;
+  width: 100%;
+  background-color: #ffece4;
 }
-.contacts_title {
-  margin-bottom: 44px;
-}
-.contacts_socials_wrapper {
+.contacts_wrapper {
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 24px;
-  margin-bottom: 72px;
+  gap: 50px;
 }
-.contacts_socials_link {
-  text-decoration: none;
-}
-.contacts_socials_img {
-  width: 60px;
-  height: 60px;
-}
-.contacts_persons_wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-.contacts_persons_pair {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 44px;
-}
-.contacts_person {
-  display: flex;
-  align-items: center;
-  gap: 42px;
-  padding-bottom: 20px;
-}
-.contacts_person_info {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
-}
-.contacts_person_info_name {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 32px;
-  color: var(--main-text-color);
-}
-.contacts_person_info_position {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: rgba(255, 255, 255, 0.5);
-}
-.contacts_person_links {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-.contact_person_link {
-  text-decoration: none;
+.contacts_map {
+  overflow: hidden;
   position: relative;
-  cursor: pointer;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 50%;
 }
-.copied_hidden {
-  display: none;
+.contacts_text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
 }
-.showup {
-  position: absolute;
-  top: -150%;
-  left: -460%;
-  width: 150px;
-  padding: 5px 5px;
-  background-color: #ffdc41;
-  border-radius: 20px;
+.contacts_adress {
+  font-size: 18px;
+  font-weight: 700;
   text-align: center;
-  color: black;
 }
-.contact_person_links_icon {
-  width: 24px;
-  height: 24px;
+.contacts_phone {
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 700;
+  color: green;
 }
-.underline-add {
-  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+.contacts_call_us {
+  margin-top: 40px;
 }
-svg {
-  width: 24px;
-  height: 24px;
-}
-path {
-  transition: all 0.5s;
-}
-svg:hover path:nth-of-type(1) {
-  fill: #ffdc41;
-  fill-opacity: 1;
-  stroke: none;
-  transition: all 0.5s;
-}
-svg:hover path:nth-of-type(2) {
-  fill: none;
-  stroke: #ffdc41;
-  stroke-opacity: 1;
-  transition: all 0.5s;
-}
-@media (max-width: 740px) {
-  .contacts_container {
+@media (max-width: 970px) {
+  .contacts_wrapper {
     width: 90%;
   }
+  .contacts_adress {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .contacts_map {
+    max-width: 90%;
+  }
 }
-@media (max-width: 650px) {
-  .contacts_container {
-    width: 91%;
+@media (max-width: 600px) {
+  .contacts_wrapper {
+    flex-direction: column-reverse;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
-  .contacts_persons_wrapper {
-    gap: 10px;
-  }
-}
-@media (max-width: 630px) {
-  .contacts_persons_pair {
-    flex-direction: column;
-    gap: 20px;
-    width: 100%;
-  }
-  .contacts_person {
-    border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-    justify-content: space-between;
-    width: 100%;
-  }
-  .contacts_persons_wrapper {
-    gap: 20px;
-  }
-  .contacts_socials_wrapper {
-    margin-bottom: 40px;
+  .contacts_wrapper {
+    width: 95%;
   }
 }
